[package]
name = "tracing-splunk-layer"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.135", features = ["derive"] }
serde_json = "1.0.77"
tracing = "0.1.29"
tracing-subscriber = "0.3.6"

[dev-dependencies]
